fix issues and apperance on mobile menu

--- a/Themes/Prostar/resources/less/main.less
+++ b/Themes/Prostar/resources/less/main.less
@@ -664,10 +664,6 @@ h4 small {
   margin: 18px 0 27px;
   border-bottom: 1px solid #eee;
 }
-.page-body{
-  margin-left: 20px;
-  padding-right: 20px;
-}
 ul,
 ol {
   padding: 0;
@@ -5828,9 +5824,6 @@ a.disabled:hover {
 .btn.btn-micro .caret {
   margin: 5px 0;
 }
-.blog{
-  margin-left: 10px;
-}
 .blog-row-rule,
 .blog-item-rule {
   border: 0;
@@ -7590,7 +7583,7 @@ figcaption {
     margin-right: 0;
   }
   .nav-pills > li > a {
-    margin-bottom: 1px;
+    margin-bottom: 3px;
   }
   .nav-pills  > li:last-child > a {
     margin-bottom: 1px;
@@ -7776,4 +7769,3 @@ ul.manager .height-50 .icon-folder-2 {
 .rtl .finder-selects {
   margin: 0 0 15px 15px;
 }
-
